fix issue on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -271,6 +271,10 @@ p {
 }
 
 @media screen and (max-width:991px) {
+  #mint-minus, #mint-plus {
+    touch-action: manipulation;
+  }
+
   #error-popup, #info-popup {
     width: 75vw;
     height: 30vh;
